Fixed edit-in-place layout issues and increased width of custom font textfield

--- a/stylebot/css/widget.css
+++ b/stylebot/css/widget.css
@@ -71,6 +71,7 @@
     outline: none !important;
     display: inline-block !important;
     float: left !important;
+    box-sizing: content-box !important;
 }
 
 #stylebot-header-container {
